; ModuleID = '/home/carl/AnghaBench/lab/engine/code/bspc/extr_be_aas_bspc.c_AAS_InitBotImport.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/bspc/extr_be_aas_bspc.c_AAS_InitBotImport.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i32, i32, i32 }

@BotImport_BSPEntityData = common dso_local global i32 0, align 4
@botimport = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@BotImport_GetMemory = common dso_local global i32 0, align 4
@FreeMemory = common dso_local global i32 0, align 4
@BotImport_Trace = common dso_local global i32 0, align 4
@BotImport_PointContents = common dso_local global i32 0, align 4
@BotImport_Print = common dso_local global i32 0, align 4
@BotImport_BSPModelMinsMaxsOrigin = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @AAS_InitBotImport() #0 {
  %1 = load i32, i32* @BotImport_BSPEntityData, align 4
  store i32 %1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @botimport, i32 0, i32 6), align 4
  %2 = load i32, i32* @BotImport_GetMemory, align 4
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @botimport, i32 0, i32 5), align 4
  %3 = load i32, i32* @FreeMemory, align 4
  store i32 %3, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @botimport, i32 0, i32 4), align 4
  %4 = load i32, i32* @BotImport_Trace, align 4
  store i32 %4, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @botimport, i32 0, i32 3), align 4
  %5 = load i32, i32* @BotImport_PointContents, align 4
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @botimport, i32 0, i32 2), align 4
  %6 = load i32, i32* @BotImport_Print, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @botimport, i32 0, i32 1), align 4
  %7 = load i32, i32* @BotImport_BSPModelMinsMaxsOrigin, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @botimport, i32 0, i32 0), align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
